--- a/ext/ai-admin-jqadm/admin/jqadm/themes/default/bootstrap.css
+++ b/ext/ai-admin-jqadm/admin/jqadm/themes/default/bootstrap.css
@@ -6,12 +6,11 @@
 
 /* Fixes */
 
-html {
-	overflow-y: scroll;
+html, body {
 	position: relative;
-	min-height: 100%;
+	overflow: auto;
+	height: 100%;
 }
-
 
 
 /* Bootstrap bugfixes */
